package guir;

public class Garagem {
}
