package guir;

public class Locomotiva {
    private int quantVagao;
    private double pesoMaximo;
}
