package guir;

public enum TipoVagao {
    ABERTO,
    FECHADO,
    REFRIGERADO
}
