package guir;

import java.util.List;

public class TremComposicao {
    List<Locomotiva> locomotivas;
    List<Vagao> vagoes;
}
