package guir;

public class Vagao {
    private TipoVagao tipo;
}
