@startuml
class Patio{
    - trensCompo : List<TremComposicao>
}

class Garagem{
    - locomotivas : List<Locomotiva>
    - vagoes : List<Vagao>
}

class TremComposicao{
    - locomotivas : List<Locomotiva>
    - vagoes : List<Vagao>
}

class Locomotiva{
    -quantVagao : int
    -pesoMaximo : double
}

class Vagao{
    tipo : tipoVagao
}

enum TipoVagao{
    Aberto
    Fechado
    Refrigerado
}


'RELAÇÔES'
Patio "1" --> "*" TremComposicao : estacionado
Garagem "1"-->"*" Locomotiva : estacionado
Garagem "1"-->"*" Vagao : estacionado


TremComposicao "1"-->"*" Vagao
TremComposicao "1"-->"1..3" Locomotiva
@enduml